[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "home-assistant-intents"
version     = "2025.5.7"
license     = "Apache-2.0"
description = "Intents for Home Assistant"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "intent", "recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"

[project.urls]
"Source Code" = "https://github.com/home-assistant/intents"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["home_assistant_intents"]

[tool.setuptools.package-data]
"*" = ["LICENSE.md"]
"home_assistant_intents" = [
    "data/*.json",
    "language_scores.json"
]
